export interface CommentVoteModel {
  userId: string
  commentId: string
  isUpvote: boolean
}
