export interface NotificationModel {
  createdAt: number // unix
  messageTitle: string
  messageBody: string
  userId: string
}
