export interface PostVoteModel {
  userId: string
  postId: string
  isUpvote: boolean
}
