export interface UserModel {
  email: string
  username: string
  lastName: string
  firstName: string
  imageUrl?: string
}
